--- a/password.html
+++ b/password.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<script>
-		console.log prompt("Welcome To Pancakez 4 Youz")
+		console.log ("Welcome To Pancakez 4 Youz")
 		var username = "Jemima";
 		var password = "Pancakes";
 		var Jemima = prompt("What is your username?")
